--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
 body {
     color: white;
     font-family: "Nunito", sans-serif;
-    background: linear-gradient(135deg, #c3f0f9 0%, #f9f3ff 100%) !important;
+    background: #2C2F33 !important;
     align-items: center;
     justify-content: center;
     
@@ -63,7 +63,7 @@ body {
   .chat-box {
     max-height: calc(100vh - 10rem);
     overflow-y: auto;
-    background: rgb(25, 25, 25);
+    background: #2C2F33;
     border-radius: 10px;
   }
   
@@ -78,7 +78,7 @@ body {
     justify-content: center;
     padding: 0.75rem;
     color: white;
-    background: rgb(30, 30, 30);
+    background: #2C2F33;
   }
   
   /* Messages */
@@ -110,7 +110,7 @@ body {
   /* Chat Input  */
   .chat-input {
     width: 100%;
-    background: rgb(30, 30, 30);
+    background: #2C2F33;
     padding: 1rem;
   }
   .send-btn {
